tests/snapshots/parser_tests__err_unclosed_paren.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:4:1

     4 │
       │ }
       │ ^^^
       │

  ⓘ Expected RParen
────────────────────────────────────────────────────────────
